feat(popup): add basic UI to popup.html"

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,34 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="PouchDB Fauxton Helper Chrome Extension"
         />
-        <link rel="apple-touch-icon" href="/logo192.png" />
+        <link rel="apple-touch-icon" href="/icon-192x192.png" />
         <link rel="manifest" href="/manifest.json" />
-        <title>React App</title>
+        <title>PouchDB Fauxton Helper</title>
         <!-- <script defer="defer" src="/static/js/main.js"></script> -->
         <script defer="defer" src="/static/js/content.js"></script>
-        <link href="/static/css/main.4a5c058a.css" rel="stylesheet" />
+        <link href="/static/css/style.css" rel="stylesheet" />
     </head>
-    <body>
-       <h1 class="text-4xl">Hello</h1>
+    <body class="rootContainer">
+        <h1 class="extHeading">PouchDB Fauxton Helper</h1>
+        <img id="logo" src="/icon-192x192.png" alt="logo" />
+        <p id="credit">
+            Crafted by
+            <a href="https://github.com/abdulghanitech" target="_blank"
+                >Abdul Ghani</a
+            >
+        </p>
+
+        <a
+            href="https://github.com/abdulghanitech/pouchdb-fauxton-helper-chrome-extension"
+            target="_blank"
+        >
+            <img
+                src="https://img.shields.io/github/stars/abdulghanitech/pouchdb-fauxton-helper-chrome-extension.svg?style=social"
+                alt="GitHub Stars"
+            />
+        </a>
+        <p>Version: 0.1.1</p>
     </body>
 </html>
